--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - MARIADB_USER=bn_moodle
       - MARIADB_DATABASE=bitnami_moodle
     volumes:
-      - 'mariadb_data:/bitnami/mariadb'
+      - /home/moodle/mariadb:mariadb_data:/bitnami/mariadb
+      
   moodle:
     image: 'docker.io/bitnami/moodle:3-debian-10'
     ports:
@@ -20,8 +21,9 @@ services:
       - MOODLE_DATABASE_NAME=bitnami_moodle
       - ALLOW_EMPTY_PASSWORD=yes
     volumes:
-      - 'moodle_data:/bitnami/moodle'
+      - /home/moodle/moodle:/bitnami/moodle
       - 'moodledata_data:/bitnami/moodledata'
+  
     depends_on:
       - mariadb
 volumes:
